--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>My First React Example</title>
   </head>
   <body>
-    <div><h1>Timer: <span id="container"></span></h1></div>
+    <div id="container"></div>
 
     <script src="https://fb.me/react-15.0.0.js"></script>
     <script src="https://fb.me/react-dom-15.0.0.js"></script>
